# Collectio_Librorum

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CompilerWarnings.cmake  gtest.cmake  qtTest.cmake
conan/: conanfile.txt  linux-profile
src/: CMakeLists.txt  main.cpp
tests/integration_tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  ExampleGTest.cpp  ExampleQtTest.cpp
